--- a/404.html
+++ b/404.html
@@ -5,16 +5,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="js.js"></script>
 	</head>
 	<body>
 		<div id="container">
-
-
-
-
-
 
 
 			<!-- BÖRJAN header -->
@@ -22,14 +17,14 @@
 				<div id="div-head">
 					<div id="head-left">
 						<div class="fl head-logo left">
-							<img src=" images/logo_inv.png" alt="Duck logo">
+							<img src="images/logo_inv.png" alt="Duck logo">
 						</div>
 						<div class="fl">
 							<h1><a href=" ">Badarens Bad</a></h1>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
-							<img src=" images/logo_inv_fliped.png" alt="Duck logo">
+							<img src="images/logo_inv_fliped.png" alt="Duck logo">
 						</div>
 					</div>
 					<div id="head-search">
@@ -38,11 +33,12 @@
 				  </form>
 					</div>
 				</div>
-				<div id="head-kundvagn"><a href="order" ><span id="kundvagn">0</span>&nbsp;</a></div>
+				<div id="head-kundvagn"><a href="order/kundvagn.html" ><span id="kundvagn">0</span>&nbsp;</a></div>
 				<div class="clear"> </div>
 			</header>
 			<!-- SLUT header -->
 
+			
 			<!-- BÖRJAN menu -->
 			<form onsubmit="return false">
 			<nav id="main-nav" class="mobile">
@@ -72,12 +68,6 @@
 			<!-- SLUT menu -->
 
 
-
-
-
-
-
-
 			<!-- BÖRJAN main -->
 			<div class="clear"></div>
 			<div id="nav-main">
@@ -92,7 +82,7 @@
 
 				<main id="right-main">
 					<h1 class="fyranollfyra">404 - Här fanns det inga badankor</h1>
-					<p style="margin: 25px;">Nej nu gick det inte helt rätt till, klicka <a href="index.html" alt="Till startsidan">HÄR</a> för att komma till början.</p>
+					<p style="margin: 25px;">Nej nu gick det inte helt rätt till, klicka <a href="index.html" title="Till startsidan">HÄR</a> för att komma till startsidan.</p>
 
 					<div class="clear"> </div>
 				</main>
@@ -101,69 +91,52 @@
 			<!-- SLUT main -->
 
 
-
-
-
-
-
-
-
-
-
-			<!-- BÖRJAN footer -->
 			<!-- BÖRJAN footer -->
 			<footer>
 			<div id="servicelankar">
-			<p class="title">Servicelänkar</p>
-			<p><a href="service/kundservice.html">Kundservice</a></p>
-			<p><a href="service/returer.html">Returer</a></p>
-			<p><a href="https://www.dustinhome.se/service/integritetspolicy">Sekretesspolicy</a></p>
-			<p><a href="service/hjalp.html">Hjälp</a></p>
-			<p><a href="service/kontakt.html">Kontakta oss</a></p>
+				<p class="title">Servicelänkar</p>
+				<p><a href="service/kundservice.html">Kundservice</a></p>
+				<p><a href="service/returer.html">Returer</a></p>
+				<p><a href="https://www.dustinhome.se/service/integritetspolicy">Sekretesspolicy</a></p>
+				<p><a href="service/hjalp.html">Hjälp</a></p>
+				<p><a href="service/kontakt.html">Kontakta oss</a></p>
 			</div>
 			<div id="betalning">
-			<p class="title">Betalningstjänster</p>
-			<a href="https://www.klarna.com/se/"><img class="img1" src=" images/logo/klarna.png" alt="klarna"></a>
-			<a href="https://www.paypal.com/se/home"><img class="img1" src=" images/logo/paypal.png" alt="paypal"></a>
-			<a href="https://www.visa.se/"><img class="img2" src=" images/logo/visa.png" alt="visa"></a>
-			<a href="https://www.mastercard.se/sv-se.html"><img class="img2" src=" images/logo/mastercard.png" alt="mastercard"></a>
+				<p class="title">Betalningstjänster</p>
+				<a href="https://www.klarna.com/se/"><img class="img1" src=" images/logo/klarna.png" alt="klarna"></a>
+				<a href="https://www.paypal.com/se/home"><img class="img1" src=" images/logo/paypal.png" alt="paypal"></a>
+				<a href="https://www.visa.se/"><img class="img2" src=" images/logo/visa.png" alt="visa"></a>
+				<a href="https://www.mastercard.se/sv-se.html"><img class="img2" src=" images/logo/mastercard.png" alt="mastercard"></a>
 			</div>
 			<div id="frakt">
-			<p class="title">Frakttjänster</p>
-			<a href="http://www.dhl.se"><img class="img1" src=" images/logo/dhl.png" alt="dhl"></a>
-			<a href="https://www.postnord.se"><img class="img1" src=" images/logo/postnord.png" alt="postnord"></a>
+				<p class="title">Frakttjänster</p>
+				<a href="http://www.dhl.se"><img class="img1" src=" images/logo/dhl.png" alt="dhl"></a>
+				<a href="https://www.postnord.se"><img class="img1" src=" images/logo/postnord.png" alt="postnord"></a>
 			</div>
 			<div id="tryggehandel">
-			<a href="https://www.tryggehandel.se/"><img class="img1" src=" images/logo/tryggehandel.png" alt="trygg e-handel"></a>
-			<div class="clear"></div>
+				<a href="https://www.tryggehandel.se/"><img class="img1" src=" images/logo/tryggehandel.png" alt="trygg e-handel"></a>
 			</div>
 			</footer>
-
 			<!-- SLUT footer -->
 
-
-
-
-
-
-			<div class="clear">
-
+			
 			<!-- W3C logos for valid HTML5 and CSS3 -->
 			<div class="clear"></div>
 			<div style="margin-top: 100px;">
-			<p>
-			<a href="http://validator.w3.org/check?uri=referer"><img
-			src="http://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
-			alt="Valid HTML5" height="50" width="50"
-			style="border:0;" /></a>
-			</p>
-			<p>
-			<a href="http://jigsaw.w3.org/css-validator/check/referer">
-			<img style="border:0;width:88px;height:31px"
-			src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-			alt="Valid CSS!" />
-			</a>
-			</p>
+				<p>
+				<a href="http://validator.w3.org/check?uri=referer"><img
+				src="http://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
+				alt="Valid HTML5" height="50" width="50"
+				style="border:0;" /></a>
+				</p>
+				<p>
+				<a href="http://jigsaw.w3.org/css-validator/check/referer">
+				<img style="border:0;width:88px;height:31px"
+				src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+				alt="Valid CSS!" />
+				</a>
+				</p>
 			</div>
-			</body>
-			</html>
+		</div>
+	</body>
+</html>
