--- a/order/kundvagn.html
+++ b/order/kundvagn.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../style.css">
-		<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
 	</head>
 	<body>
@@ -38,13 +38,12 @@
 			</header>
 			<!-- SLUT header -->
 
-			
 			<!-- BÖRJAN menu -->
 			<form onsubmit="return false">
 			<nav id="main-nav" class="mobile">
 				<ul class="topnav">
 					<li class="menu" onclick="topMenu()"><a href="#">| | |</a></li>
-					<li class="left"><a href="../">HEM</a></li>
+					<li class="left"><a href="../index.html">HEM</a></li>
 					<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
 					<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
 					<li class="left"><a href="../ovriga/badankor_ovriga.html">ÖVRIGA</a></li>
@@ -56,7 +55,7 @@
 
 			<nav id="bread-crumbs">
 				<ul>
-					<li><a href="../">Hem</a> <span> / </span> <a href=" ">Kundvagn</a></li>
+					<li><a href="../">Hem</a> <span> / </span> <a href=" ">Kundvagn</a> <span> / </span></li>
 				</ul>
 			</nav>
 
@@ -195,39 +194,36 @@
 
 			<!-- BÖRJAN footer -->
 			<footer>
-				<div id="servicelankar">
-					<p class="title">Servicelänkar</p>
-					<p><a href="service/kundservice.html">Kundservice</a></p>
-					<p><a href="service/returer.html">Returer</a></p>
-					<p><a href="https://www.dustinhome.se/service/integritetspolicy">Sekretesspolicy</a></p>
-					<p><a href="service/hjalp.html">Hjälp</a></p>
-					<p><a href="service/kontakt.html">Kontakta oss</a></p>
-				</div>
-				<div id="betalning">
-					<p class="title">Betalningstjänster</p>
-					<a href="https://www.klarna.com/se/"><img class="img1" src="../images/logo/klarna.png" alt="klarna"></a>
-					<a href="https://www.paypal.com/se/home"><img class="img1" src="../images/logo/paypal.png" alt="paypal"></a>
-					<a href="https://www.visa.se/"><img class="img2" src="../images/logo/visa.png" alt="visa"></a>
-					<a href="https://www.mastercard.se/sv-se.html"><img class="img2" src="../images/logo/mastercard.png" alt="mastercard"></a>
-				</div>
-				<div id="frakt">
-					<p class="title">Frakttjänster</p>
-					<a href="http://www.dhl.se"><img class="img1" src="../images/logo/dhl.png" alt="dhl"></a>
-					<a href="https://www.postnord.se"><img class="img1" src="../images/logo/postnord.png" alt="postnord"></a>
-				</div>
-				<div id="tryggehandel">
-					<a href="https://www.tryggehandel.se/"><img class="img1" src="../images/logo/tryggehandel.png" alt="trygg e-handel"></a>
-					<div class="clear"></div>
-				</div>
+			<div id="servicelankar">
+				<p class="title">Servicelänkar</p>
+				<p><a href="service/kundservice.html">Kundservice</a></p>
+				<p><a href="service/returer.html">Returer</a></p>
+				<p><a href="https://www.dustinhome.se/service/integritetspolicy">Sekretesspolicy</a></p>
+				<p><a href="service/hjalp.html">Hjälp</a></p>
+				<p><a href="service/kontakt.html">Kontakta oss</a></p>
+			</div>
+			<div id="betalning">
+				<p class="title">Betalningstjänster</p>
+				<a href="https://www.klarna.com/se/"><img class="img1" src=" images/logo/klarna.png" alt="klarna"></a>
+				<a href="https://www.paypal.com/se/home"><img class="img1" src=" images/logo/paypal.png" alt="paypal"></a>
+				<a href="https://www.visa.se/"><img class="img2" src=" images/logo/visa.png" alt="visa"></a>
+				<a href="https://www.mastercard.se/sv-se.html"><img class="img2" src=" images/logo/mastercard.png" alt="mastercard"></a>
+			</div>
+			<div id="frakt">
+				<p class="title">Frakttjänster</p>
+				<a href="http://www.dhl.se"><img class="img1" src=" images/logo/dhl.png" alt="dhl"></a>
+				<a href="https://www.postnord.se"><img class="img1" src=" images/logo/postnord.png" alt="postnord"></a>
+			</div>
+			<div id="tryggehandel">
+				<a href="https://www.tryggehandel.se/"><img class="img1" src=" images/logo/tryggehandel.png" alt="trygg e-handel"></a>
+			</div>
 			</footer>
 			<!-- SLUT footer -->
 
-
-			<div class="clear"> </div>
-
+			
 			<!-- W3C logos for valid HTML5 and CSS3 -->
 			<div class="clear"></div>
-			<div id="htmlcssvalid" style="margin-top: 100px;">
+			<div style="margin-top: 100px;">
 				<p>
 				<a href="http://validator.w3.org/check?uri=referer"><img
 				src="http://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
