--- a/ovriga/badankor_ovriga.html
+++ b/ovriga/badankor_ovriga.html
@@ -5,18 +5,13 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../style.css">
-		<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
 	</head>
 	<body>
 		<div id="container">
 
-
-
-
-
-
-
+			
 			<!-- BÖRJAN header -->
 			<header>
 				<div id="div-head">
@@ -38,23 +33,21 @@
 				  </form>
 					</div>
 				</div>
-				<div id="head-kundvagn"><a href=" kundvagn/" ><span id="kundvagn">0</span>&nbsp;</a></div>
+				<div id="head-kundvagn"><a href="../order/kundvagn.html"><span id="kundvagn">0</span>&nbsp;</a></div>
 				<div class="clear"> </div>
 			</header>
 			<!-- SLUT header -->
 
+			
 			<!-- BÖRJAN menu -->
 			<form onsubmit="return false">
 			<nav id="main-nav" class="mobile">
 				<ul class="topnav">
 					<li class="menu" onclick="topMenu()"><a href="#home">| | |</a></li>
-
 					<li class="left"><a href="../index.html">HEM</a></li>
 					<li class="left"><a href="../yrken/badankor_yrken.html">YRKEN</a></li>
 					<li class="left"><a href="../superhjaltar/badankor_heros.html">SUPERHJÄLTAR</a></li>
 					<li class="left"><a class="active" href="">ÖVRIGA</a></li>
-					<li class="menu mobile" onclick="topMenu()"><a href="#home">| | |</a></li>
-					<li class="vagn mobile"><a href="../order" ><span id="kundvagn1">0</span>&nbsp;</a></li>
 				</ul>
 			</nav>
 			</form>
@@ -74,12 +67,6 @@
 				<img onclick="setLanguage('en')" src="../images/lang/en.jpg" alt="engelska flaggan">
 			</div>
 			<!-- SLUT menu -->
-
-
-
-
-
-
 
 
 			<!-- BÖRJAN main -->
@@ -123,69 +110,52 @@
 			<!-- SLUT main -->
 
 
-
-
-
-
-
-
-
-
-
-			<!-- BÖRJAN footer -->
 			<!-- BÖRJAN footer -->
 			<footer>
-	<div id="servicelankar">
-	<p class="title">Servicelänkar</p>
-	<p><a href="service/kundservice.html">Kundservice</a></p>
-	<p><a href="service/returer.html">Returer</a></p>
-	<p><a href="https://www.dustinhome.se/service/integritetspolicy">Sekretesspolicy</a></p>
-	<p><a href="service/hjalp.html">Hjälp</a></p>
-	<p><a href="service/kontakt.html">Kontakta oss</a></p>
-	</div>
-	<div id="betalning">
-	<p class="title">Betalningstjänster</p>
-	<a href="https://www.klarna.com/se/"><img class="img1" src="../images/logo/klarna.png" alt="klarna"></a>
-	<a href="https://www.paypal.com/se/home"><img class="img1" src="../images/logo/paypal.png" alt="paypal"></a>
-	<a href="https://www.visa.se/"><img class="img2" src="../images/logo/visa.png" alt="visa"></a>
-	<a href="https://www.mastercard.se/sv-se.html"><img class="img2" src="../images/logo/mastercard.png" alt="mastercard"></a>
-	</div>
-	<div id="frakt">
-	<p class="title">Frakttjänster</p>
-	<a href="http://www.dhl.se"><img class="img1" src="../images/logo/dhl.png" alt="dhl"></a>
-	<a href="https://www.postnord.se"><img class="img1" src="../images/logo/postnord.png" alt="postnord"></a>
-	</div>
-	<div id="tryggehandel">
-	<a href="https://www.tryggehandel.se/"><img class="img1" src="../images/logo/tryggehandel.png" alt="trygg e-handel"></a>
-	<div class="clear"></div>
-	</div>
-	</footer>
-
+			<div id="servicelankar">
+				<p class="title">Servicelänkar</p>
+				<p><a href="service/kundservice.html">Kundservice</a></p>
+				<p><a href="service/returer.html">Returer</a></p>
+				<p><a href="https://www.dustinhome.se/service/integritetspolicy">Sekretesspolicy</a></p>
+				<p><a href="service/hjalp.html">Hjälp</a></p>
+				<p><a href="service/kontakt.html">Kontakta oss</a></p>
+			</div>
+			<div id="betalning">
+				<p class="title">Betalningstjänster</p>
+				<a href="https://www.klarna.com/se/"><img class="img1" src=" images/logo/klarna.png" alt="klarna"></a>
+				<a href="https://www.paypal.com/se/home"><img class="img1" src=" images/logo/paypal.png" alt="paypal"></a>
+				<a href="https://www.visa.se/"><img class="img2" src=" images/logo/visa.png" alt="visa"></a>
+				<a href="https://www.mastercard.se/sv-se.html"><img class="img2" src=" images/logo/mastercard.png" alt="mastercard"></a>
+			</div>
+			<div id="frakt">
+				<p class="title">Frakttjänster</p>
+				<a href="http://www.dhl.se"><img class="img1" src=" images/logo/dhl.png" alt="dhl"></a>
+				<a href="https://www.postnord.se"><img class="img1" src=" images/logo/postnord.png" alt="postnord"></a>
+			</div>
+			<div id="tryggehandel">
+				<a href="https://www.tryggehandel.se/"><img class="img1" src=" images/logo/tryggehandel.png" alt="trygg e-handel"></a>
+			</div>
+			</footer>
 			<!-- SLUT footer -->
 
-
-
-
-
-
-
-		<!-- W3C logos for valid HTML5 and CSS3 -->
-		<div class="clear"></div>
-		<div style="margin-top: 100px;">
-			<p>
-			<a href="http://validator.w3.org/check?uri=referer"><img
-			src="http://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
-			alt="Valid HTML5" height="50" width="50"
-			style="border:0;" /></a>
-			</p>
-			<p>
-			<a href="http://jigsaw.w3.org/css-validator/check/referer">
-			<img style="border:0;width:88px;height:31px"
-			src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-			alt="Valid CSS!" />
-			</a>
-			</p>
+			
+			<!-- W3C logos for valid HTML5 and CSS3 -->
+			<div class="clear"></div>
+			<div style="margin-top: 100px;">
+				<p>
+				<a href="http://validator.w3.org/check?uri=referer"><img
+				src="http://www.w3.org/html/logo/downloads/HTML5_Logo_64.png"
+				alt="Valid HTML5" height="50" width="50"
+				style="border:0;" /></a>
+				</p>
+				<p>
+				<a href="http://jigsaw.w3.org/css-validator/check/referer">
+				<img style="border:0;width:88px;height:31px"
+				src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+				alt="Valid CSS!" />
+				</a>
+				</p>
+			</div>
 		</div>
-	</div>		
 	</body>
-	</html>
+</html>
